fix(fe): sp-503 fix crs placeholder and autocomplete placeholder length (#419)
I have noticed that the Autocomplete component wasn't using the whole
space available for the placeholder, so I fixed it. Nevertheless the
previous placeholder for the crs was too long, so I used a different
placeholder

--- a/frontend/soilhive-app/src/styles/prime.react.override.scss
+++ b/frontend/soilhive-app/src/styles/prime.react.override.scss
@@ -1,5 +1,9 @@
 .p-autocomplete {
   border: 1px solid #dddddd;
+
+  .p-autocomplete-input {
+    width: 100%;
+  }
 }
 
 .p-autocomplete-panel {
